chore(project): rename workflow to process in files